--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.3",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7"
   },
   "type": "module"
